# seano-ca-hardware

./: .gitignore
seano_ca_ws/: stop_phase7_safe.sh
seano_ca_ws/src/seano_vision/: package.xml  setup.cfg  setup.py
seano_ca_ws/src/seano_vision/config/: alfin7_hardware_light.yaml  camera_hp_rtsp.yaml  camera_usb.yaml
seano_ca_ws/src/seano_vision/launch/: phase7_cuav_usb_hardware.launch.py
seano_ca_ws/src/seano_vision/seano_vision/: __init__.py  actuator_safety_limiter_node.py  auto_controller_stub_node.py  camera_node.py  command_mux_node.py  detector_node.py  event_logger_node.py  false_positive_guard_node.py  frame_freeze_detector_node.py  mavros_rc_override_bridge_node.py  mission_mode_manager_node.py  multi_target_fusion_node.py  risk_evaluator_node.py  time_sync_node.py  vision_quality_node.py  waterline_horizon_node.py
